lasst minute changes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-<header class="header">
+<header class="header"> <!--navigation bar-->
 
-    <img class="slate" src="slate logo.png">
+    <img class="slate" src="slate logo.png"> <!--About Team Store-->
     
     <nav class="navbar">
         <a href="">About</a>
@@ -21,18 +21,17 @@
     </nav>
 
     <div class="icons">
-        <!-- <a href="" class="ig"><img class="ig_logo" src="ig logo1.jpg"></a> -->
-        <img class="cart" id="cart-btn" src="cart.jpeg">
+        <img class="cart" id="cart-btn" src="cart.jpeg"> <!--cart-->
     </div>
 
-    <div class="shopping-cart">
+    <div class="shopping-cart"> <!--inside the cart-->
         <div class="box">
             <i><img class="bin" src="bin.jpg"></i>
             <img class="jersey" src="slate jersey.png">
             <div class="content">
                 <h3>Slate Jersey</h3>
                 <span class="price">$69.88/-</span>
-                <span class="quantity">qty : 1</span>
+                <span class="quantity">Qty : 1</span>
             </div>
         </div>
         <div class="box">
@@ -41,16 +40,16 @@
             <div class="content">
                 <h3>Slate Jacket</h3>
                 <span class="price">$126.69/-</span>
-                <span class="quantity">qty : 1</span>
+                <span class="quantity">Qty : 1</span>
             </div>
         </div>
-        <div class="total"> total : $196.57/-</div>
-        <a href="#" class="checkout">checkout</a>
+        <div class="total"> Total : $196.57/-</div>
+        <a href="#" class="checkout">Checkout</a>
     </div>
 
 </header>
 
-<section class="about" id="about">
+<section class="about" id="about"> <!--About section-->
 
     <div class="content">
         <h3>WHAT IS SLATE</h3>
@@ -61,15 +60,15 @@
 
 </section>
 
-<section class="sponsors" id="sponsors">
+<section class="sponsors" id="sponsors"> <!--Sponsors section-->
 
     <h1 class="heading">Sponsors</h1>
 
-    <div class="swiper sponsor-slider">
+    <div class="swiper sponsor-slider"> <!--Swiper css-->
 
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide box">
+            <div class="swiper-slide box"> <!--Box for img-->
                 <img src="the alley logo.png">
             </div>
             <div class="swiper-slide box">
@@ -86,12 +85,12 @@
 
 </section>
 
-<section class="team" id="team">
+<section class="team" id="team"> <!--Team section-->
 
     <h1 class="heading">Team</h1>
 
-    <div class="box-container">
-        <div class="box">
+    <div class="box-container"> 
+        <div class="box"> <!--box-container for profile-->
             <h3>FMM</h3>
             <img class="profile_pic" src="cross arm pose1.png">
             <img class="ig_logo" src="ig logo2.jpg">
@@ -145,7 +144,7 @@
 
 </section>
 
-<section class="achievement" id="achievement">
+<section class="achievement" id="achievement"> <!--Achievement section-->
 
     <h1 class="heading">Achievement</h1>
 
@@ -159,12 +158,12 @@
 
 </section>
 
-<section class="store" id="store">
+<section class="store" id="store"> <!--Store section-->
 
     <h1 class="heading">Store</h1>
 
     <div class="box-container">
-        <div class="box">
+        <div class="box"> <!--box container for the different items-->
             <img src="slate jersey2.png">
             <h3>Slate Jersey</h3>
             <p>Up to 25% off</p>
@@ -187,8 +186,8 @@
     <div class="box-container">
         <div class="box">
             <img src="slate logo - Copy.png">
-            <div class="share">
-                <a href="" class="fab fa-facebook-f"></a>
+            <div class="share"> <!--logos used from font awesome css-->
+                <a href="" class="fab fa-facebook-f"></a> 
                 <a href="" class="fab fa-twitter"></a>
                 <a href="" class="fab fa-instagram"></a>
                 <a href="" class="fab fa-linkedin"></a>
